--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -29,6 +29,7 @@ googleapis-common-protos==1.62.0
 identify==2.5.33
 idna==3.6
 iniconfig==2.0.0
+kaleido==0.2.1
 kiwisolver==1.4.5
 matplotlib==3.8.2
 nodeenv==1.8.0
@@ -37,6 +38,7 @@ packaging==23.2
 pandas==2.1.4
 pillow==10.1.0
 platformdirs==4.1.0
+plotly==5.18.0
 pluggy==1.3.0
 pre-commit==3.6.0
 protobuf==4.25.1
@@ -58,6 +60,7 @@ requests==2.31.0
 rsa==4.9
 ruff==0.1.8
 six==1.16.0
+tenacity==8.2.3
 typing-extensions==4.9.0
 tzdata==2023.3
 urllib3==2.1.0
