--- a/requirements.txt
+++ b/requirements.txt
@@ -22,12 +22,14 @@ google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.62.0
 idna==3.6
+kaleido==0.2.1
 kiwisolver==1.4.5
 matplotlib==3.8.2
 numpy==1.26.2
 packaging==23.2
 pandas==2.1.4
 pillow==10.1.0
+plotly==5.18.0
 protobuf==4.25.1
 pyarrow==14.0.1
 pyasn1==0.5.1
@@ -42,6 +44,7 @@ pytz==2023.3.post1
 requests==2.31.0
 rsa==4.9
 six==1.16.0
+tenacity==8.2.3
 typing-extensions==4.9.0
 tzdata==2023.3
 urllib3==2.1.0
