--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -24,6 +24,10 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install -e . --no-deps
+      - name: Check out previous data
+        run: |
+          git fetch origin/data
+          git checkout origin/data -- data/
       - name: Collect analytics
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
