--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -26,7 +26,7 @@ jobs:
           pip install -e . --no-deps
       - name: Check out previous data
         run: |
-          git fetch origin/data
+          git fetch origin data
           git checkout origin/data -- data/
       - name: Collect analytics
         env:
