--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -1,5 +1,5 @@
 name: Analytics
-on: 
+on:
   schedule:
     - cron: 45 0 * * *
   workflow_dispatch:
@@ -13,10 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.12
-          cache: 'pip'
+          python-version: "3.12"
+          cache: "pip"
           cache-dependency-path: |
             requirements.txt
             pyproject.toml
@@ -31,8 +31,10 @@ jobs:
       - name: Collect analytics
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         run: |
-          python src/gh_project_metrics/main.py
+          project-analytics aai-institute/lakefs-spec
+          project-analytics aai-institute/nnbench
       - name: Commit report
         run: |
           # For proper UI integration: https://github.com/actions/checkout/pull/1184
