--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -6,6 +6,7 @@ on:
 
 permissions:
   contents: write
+  id-token: "write"
 
 jobs:
   analyics:
@@ -28,10 +29,12 @@ jobs:
         run: |
           git fetch origin data
           git checkout origin/data -- data/
+      - uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: "${{ secrets.GOOGLE_CREDENTIALS }}"
       - name: Collect analytics
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         run: |
           project-analytics aai-institute/lakefs-spec
           project-analytics aai-institute/nnbench
