--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -9,7 +9,7 @@ permissions:
   id-token: "write"
 
 jobs:
-  analyics:
+  analytics:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
