feat: Add Supabase metrics writer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
   "db-dtypes",             # BigQuery to Pandas
   "plotly",
   "kaleido",               # Plotly image export
+  "supabase",
 ]
 
 [project.optional-dependencies]
