--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,14 +12,20 @@ repos:
     rev: v1.9.0
     hooks:
       # See https://github.com/pre-commit/mirrors-mypy/blob/main/.pre-commit-hooks.yaml
-     - id: mypy
-       types_or: [ python, pyi ]
-       args: [--ignore-missing-imports, --scripts-are-modules]
+      - id: mypy
+        types_or: [python, pyi]
+        args:
+          [
+            --ignore-missing-imports,
+            --scripts-are-modules,
+            --install-types,
+            --non-interactive,
+          ]
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.3.2
     hooks:
       - id: ruff
-        args: [ --fix, --exit-non-zero-on-fix ]
+        args: [--fix, --exit-non-zero-on-fix]
       - id: ruff-format
   - repo: https://github.com/jazzband/pip-tools
     rev: 7.4.1
