--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -36,7 +36,7 @@ jobs:
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         run: |
-          project-analytics aai-institute/lakefs-spec
+          project-analytics aai-institute/lakefs-spec --supabase
           project-analytics aai-institute/nnbench
       - name: Commit report
         run: |
