--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -35,6 +35,8 @@ jobs:
       - name: Collect analytics
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
           project-analytics aai-institute/lakefs-spec --supabase
           project-analytics aai-institute/nnbench
