--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ deprecation==2.1.0
 fonttools==4.49.0
 google-api-core==2.17.1
 google-auth==2.28.2
+google-auth-oauthlib==1.2.1
 google-cloud-bigquery==3.19.0
 google-cloud-core==2.4.1
 google-crc32c==1.5.0
@@ -31,8 +32,10 @@ kaleido==0.2.1
 kiwisolver==1.4.5
 matplotlib==3.8.3
 numpy==1.26.4
+oauthlib==3.2.2
 packaging==24.0
 pandas==2.2.1
+pandas-gbq==0.23.1
 pillow==10.2.0
 plotly==5.20.0
 postgrest==0.16.1
@@ -43,6 +46,7 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==2.6.4
 pydantic-core==2.16.3
+pydata-google-auth==1.8.2
 pygithub==2.2.0
 pyjwt==2.8.0
 pynacl==1.5.0
@@ -51,7 +55,9 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 realtime==1.0.2
 requests==2.31.0
+requests-oauthlib==2.0.0
 rsa==4.9
+setuptools==71.1.0
 six==1.16.0
 sniffio==1.3.1
 storage3==0.7.3
