--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -13,14 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-      - name: Install dependencies
-        run: |
-          pip install -U uv
-          uv pip install --system -e . -r requirements-dev.txt
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+      - name: Install Python interpreter
+        run: uv python install "3.13"
+      - run: uv sync --all-extras --dev
       - name: Run Python tests
         run: pytest
       - name: Check out previous data
