--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ default_language_version:
   python: python3.11
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: check-added-large-files
       - id: check-json
@@ -11,7 +11,7 @@ repos:
       - id: end-of-file-fixer
       - id: mixed-line-ending
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.0
+    rev: v1.13.0
     hooks:
       # See https://github.com/pre-commit/mirrors-mypy/blob/main/.pre-commit-hooks.yaml
       - id: mypy
@@ -24,27 +24,13 @@ repos:
             --non-interactive,
           ]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.5.5
+    rev: v0.7.1
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
       - id: ruff-format
   - repo: https://github.com/astral-sh/uv-pre-commit
-    rev: 0.2.32
+    rev: 0.4.28
     hooks:
-      - id: pip-compile
-        name: pip-compile requirements.txt
-        args:
-          - --no-annotate
-          - --strip-extras
-          - --output-file=requirements.txt
-          - pyproject.toml
-        files: ^(pyproject\.toml|requirements\.txt)$
-      - id: pip-compile
-        name: pip-compile requirements-dev.txt
-        args:
-          - --no-annotate
-          - --extra=dev
-          - --output-file=requirements-dev.txt
-          - pyproject.toml
-        files: ^(pyproject\.toml|requirements-dev\.txt)$
+      - id: uv-lock
+        name: Lock project dependencies
