--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -19,7 +19,7 @@ jobs:
         run: uv python install "3.13"
       - run: uv sync --all-extras --dev
       - name: Run Python tests
-        run: pytest
+        run: uv run pytest
       - name: Check out previous data
         run: |
           git fetch origin data
@@ -31,12 +31,12 @@ jobs:
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         run: |
-          project-analytics --bigquery --bigquery-dataset-prefix="analytics_" aai-institute/lakefs-spec
+          uv run project-analytics --bigquery --bigquery-dataset-prefix="analytics_" aai-institute/lakefs-spec
       - name: Collect analytics for nnbench
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         run: |
-          project-analytics --bigquery --bigquery-dataset-prefix="analytics_" aai-institute/nnbench
+          uv run project-analytics --bigquery --bigquery-dataset-prefix="analytics_" aai-institute/nnbench
       - name: Commit report
         run: |
           # For proper UI integration: https://github.com/actions/checkout/pull/1184
