fix: Allow specifying PyPI package name via CLI
This is passed through the `--pypi-package-name` flag.

--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -41,7 +41,7 @@ jobs:
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         run: |
-          uv run project-analytics --bigquery --bigquery-dataset-prefix="analytics_" aai-institute/jobq
+          uv run project-analytics --bigquery --bigquery-dataset-prefix="analytics_" --pypi-package-name aai-jobq aai-institute/jobq
       - name: Commit report
         run: |
           # For proper UI integration: https://github.com/actions/checkout/pull/1184
