--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,12 @@ dependencies = [
   "matplotlib",
   "PyGithub",
   "google-cloud-bigquery",
-  "db-dtypes",             # BigQuery to Pandas
+  "db-dtypes", # BigQuery to Pandas
   "pandas-gbq",
   "plotly",
-  "kaleido==0.2.1",        # Plotly image export; FIXME: 0.2.1.post1 is broken
+  "kaleido==0.2.1", # Plotly image export; FIXME: 0.2.1.post1 is broken
   "supabase",
+  "loguru>=0.7.3",
 ]
 
 [tool.uv]
