--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ dependencies = [
   "dagster-webserver>=1.9.5",
   "packaging>=24.2",
   "gcsfs>=2024.12.0",
+  "beautifulsoup4>=4.12.3",
+  "requests>=2.32.3",
 ]
 
 [tool.uv]
