--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=45", "setuptools-scm[toml]>=7.1", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "gh-project-metrics"
-dynamic = ["version"]
+version = "0.1.0"
 description = ""
 readme = "README.md"
 requires-python = ">=3.11"
