--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,10 @@ dependencies = [
   "matplotlib",
   "PyGithub",
   "google-cloud-bigquery",
-  "db-dtypes", # BigQuery to Pandas
+  "db-dtypes",                # BigQuery to Pandas
   "pandas-gbq",
   "plotly",
-  "kaleido==0.2.1", # Plotly image export; FIXME: 0.2.1.post1 is broken
+  "kaleido==0.2.1",           # Plotly image export; FIXME: 0.2.1.post1 is broken
   "supabase",
   "loguru>=0.7.3",
   "dagster>=1.9.5",
@@ -40,6 +40,7 @@ dependencies = [
 [tool.uv]
 dev-dependencies = [
   "build>=0.10.0",
+  "ipykernel>=6.29.5",
   "ipython>=8.32.0",
   "pre-commit>=3.3.3",
   "pytest>=7.4.0",
@@ -82,6 +83,7 @@ warn_unreachable = true
 
 [tool.ruff]
 preview = true
+target-version = "py312"
 line-length = 100
 
 [tool.ruff.lint]
