--- a/.github/workflows/analytics.yaml
+++ b/.github/workflows/analytics.yaml
@@ -9,54 +9,84 @@ permissions:
   id-token: "write"
 
 jobs:
-  analytics:
+  tests:
+    name: Tests (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.12", "3.13"]
     steps:
-      - uses: actions/checkout@v4
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
+      - uses: actions/checkout@v6
+
+      - name: Install uv (with caching)
+        uses: astral-sh/setup-uv@v7
+        with:
+          python-version: ${{ matrix.python-version }}
+          enable-cache: true
+          cache-suffix: py${{ matrix.python-version }}
+          cache-dependency-glob: |
+            uv.lock
+            pyproject.toml
+
+      - name: Install Python interpreter
+        run: uv python install "${{ matrix.python-version }}"
+
+      - name: Install dependencies
+        run: uv sync --dev --frozen
+
+      - name: Run Python tests
+        run: uv run --frozen pytest
+
+  analytics:
+    name: Analytics (${{ matrix.repo }})
+    runs-on: ubuntu-latest
+    needs: tests
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - repo: aai-institute/lakefs-spec
+            token_secret: GH_ACCESS_TOKEN
+          - repo: aai-institute/nnbench
+            token_secret: GH_ACCESS_TOKEN
+          - repo: aai-institute/pyDVL
+            token_secret: GH_ACCESS_TOKEN
+          - repo: sbi-dev/sbi
+            token_secret: SBI_GH_ACCESS_TOKEN
+          - repo: optimagic-dev/optimagic
+            token_secret: OPTIMAGIC_GH_ACCESS_TOKEN
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Install uv (with caching)
+        uses: astral-sh/setup-uv@v7
+        with:
+          python-version: "3.13"
+          enable-cache: true
+          cache-suffix: py3.13
+          cache-dependency-glob: |
+            uv.lock
+            pyproject.toml
+          save-cache: false
+
       - name: Install Python interpreter
         run: uv python install "3.13"
-      - run: uv sync --dev
-      - name: Run Python tests
-        run: uv run pytest
-      - uses: "google-github-actions/auth@v2"
+
+      - name: Install dependencies
+        run: uv sync --dev --frozen
+
+      - uses: "google-github-actions/auth@v3"
         with:
           credentials_json: "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}"
+
       - id: date
         run: echo "PARTITION_DATE=$(date -d 'yesterday' +%Y-%m-%d)" >> $GITHUB_OUTPUT
-      - name: Collect analytics for lakeFS-spec
+
+      - name: Collect analytics
         uses: ./.github/actions/dagster
         with:
           definitions_module: "gh_project_metrics.dagster.definitions"
           asset_selector: "*"
-          partition: "${{ steps.date.outputs.PARTITION_DATE }}|aai-institute/lakefs-spec"
-          github_access_token: "${{ secrets.GH_ACCESS_TOKEN }}"
-      - name: Collect analytics for nnbench
-        uses: ./.github/actions/dagster
-        with:
-          definitions_module: "gh_project_metrics.dagster.definitions"
-          asset_selector: "*"
-          partition: "${{ steps.date.outputs.PARTITION_DATE }}|aai-institute/nnbench"
-          github_access_token: "${{ secrets.GH_ACCESS_TOKEN }}"
-      - name: Collect analytics for pyDVL
-        uses: ./.github/actions/dagster
-        with:
-          definitions_module: "gh_project_metrics.dagster.definitions"
-          asset_selector: "*"
-          partition: "${{ steps.date.outputs.PARTITION_DATE }}|aai-institute/pyDVL"
-          github_access_token: "${{ secrets.GH_ACCESS_TOKEN }}"
-      - name: Collect analytics for SBI
-        uses: ./.github/actions/dagster
-        with:
-          definitions_module: "gh_project_metrics.dagster.definitions"
-          asset_selector: "*"
-          partition: "${{ steps.date.outputs.PARTITION_DATE }}|sbi-dev/sbi"
-          github_access_token: "${{ secrets.SBI_GH_ACCESS_TOKEN }}"
-      - name: Collect analytics for optimagic
-        uses: ./.github/actions/dagster
-        with:
-          definitions_module: "gh_project_metrics.dagster.definitions"
-          asset_selector: "*"
-          partition: "${{ steps.date.outputs.PARTITION_DATE }}|optimagic-dev/optimagic"
-          github_access_token: "${{ secrets.OPTIMAGIC_GH_ACCESS_TOKEN }}"
+          partition: "${{ steps.date.outputs.PARTITION_DATE }}|${{ matrix.repo }}"
+          github_access_token: "${{ secrets[matrix.token_secret] }}"
